--- a/index.html
+++ b/index.html
@@ -5,12 +5,55 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>My Portfolio</title>
+  <link rel="stylesheet" href="./css/styles.css">
+
 </head>
 
 <body>
-    <H1>
-        My Portfolio
-    </H1>
+<div>
+<h1>Jaylin Manuel</h1>
+<h2>Software Developer</h2>
+<hr>
+<p class="experienceInfo">My <i>favorite</i> thing about programming is improving and developing my problem solving skills
+  along with obtaining new tools and knowledge about web development and programming!
+</p>
+</div>
+
+<div>
+<h3>About Me</h3>
+<img
+alt="laptop with code"
+src="https://www.itprotoday.com/sites/itprotoday.com/files/styles/article_featured_retina/public/programming%20evolution.jpg?itok=WTj9-yNz/200x200"
+
+></div>
+<div class="experienceInfo">
+<p>On the other hand, we denounce with righteous indignation and dislike men who are so beguiled and demoralized by the charms of pleasure of the moment, so blinded by desire, that they cannot foresee the pain and trouble that are bound to ensue; 
+  and equal blame belongs to those who fail in their duty through weakness of will, which is the same as saying through shrinking from toil and pain. These cases are perfectly simple and easy to distinguish. In a free hour, when our power of choice 
+  is untrammelled and when nothing prevents our being able to do what we like best, every pleasure is to be welcomed and every pain avoided. But in certain circumstances and owing to the claims of duty or the obligations of business it will frequently 
+  occur that pleasures have to be repudiated and annoyances accepted. The wise man therefore always holds in these matters to this principle of selection: he rejects pleasures to secure other greater pleasures, or else he endures pains to avoid worse pains.</p>
+</div>
+<div>
+    <h3>My Projects</h3>
+    <hr>
+<ul>
+    <li>Project 1</li>
+    <li>Project 2</li>
+    <li>Project 3</li>
+</ul>
+</div>
+<div>
+  <h3>Contact Me</h3>
+  <hr>
+  <p>
+    <b>Phone: (222) 555-1111</b>
+    <b>Email:</b><a href="mailto:jaylin.manuel02@gmail.com">jaylin.manuel02@gmail.com
+    </a>
+  </p>
+</div>
+ 
+
+
+  
     <!-- 
       Directions:
         1. Create a DIV element to contain the page content
